<resources>
    <string name="app_name">Smart Restaurant Management</string>
    <string name="sys_name">Smart Restaurant</string>
    <string name="login_here">Login here</string>
    <string name="register_here">Register here</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="Register">register</string>
    <string name="back_to_login">Back to login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_is_exists">Phone number already exists!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="urgent">Urgent</string>
    <string name="normal">Normal</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_categories">All Categories</string>
    <string name="total">Total</string>
    <string name="next">Next</string>
    <string name="item_added">Item aded</string>
    <string name="items_added">Items added</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="modify_item">Modify Item</string>
    <string name="cart_is_empty_when_you_place_an_order_your_item_show_here">Cart is empty when you place an order, \n your item show here</string>
    <string name="no_offers_to_show_n_offers_will_appear_here_soon">No offers to show \n offers will appear here soon</string>
    <string name="your_order">Your Order</string>
    <string name="have_promo_code">Have promo code</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub total</string>
    <string name="payble_amount">Payble amount</string>
    <string name="service_fee">Service fee</string>
    <string name="select_a_table">Select a Table</string>
    <string name="add">Add</string>
    <string name="no_tables_avilable">No tables avilable</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved By </string>
    <string name="discount">Discount</string>
    <string name="welcome">Welcome</string>
    <string name="submit">Submit</string>
    <string name="ready_to_pay">Ready to pay</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="are_you_sure_delete_offer">Are you sure you want to delete this offer?</string>
    <string name="are_you_sure_delete_user">Are you sure you want to delete this user?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="thank_you">THANK YOU</string>
    <string name="username">Username</string>
    <string name="empolyee_id">Employee Id</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="reports">Reports</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="select_an_category">Select an Category</string>
    <string name="type">Type</string>
    <string name="cost">Cost</string>
    <string name="save">Save</string>
    <string name="use_camera">Use camera</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="add_image">Add image</string>
    <string name="choose_images">Choose images</string>
    <string name="unable_to_open_camera">Unable to open camera</string>
    <string name="file_provider" translatable="false">com.thejan.proj.restaurant.admin.android.fileprovider</string>
    <string name="please_provide_all_details">Please provide all details!</string>
    <string name="item_name_exists">Item name exists, Please try another name!</string>
    <string name="successfully_food_item_added">Successfully food item added!</string>
    <string name="successfully_table_added">Successfully Table item added!</string>
    <string name="successfully_offer_added">Successfully Offer added!</string>
    <string name="successfully_user_added">Successfully User added!</string>
    <string name="categories">Categories</string>
    <string name="category_name_exists">Category name exists!</string>
    <string name="oder_placing">Order placing</string>
    <string name="pending">Pending</string>
    <string name="processing">Processing</string>
    <string name="served">Served</string>
    <string name="settled_the_bill">Settle the Bill</string>
    <string name="current_orders_status">Current Orders Status</string>
    <string name="table_number">Table Number</string>
    <string name="view">View</string>
    <string name="settle">Settle</string>
    <string name="invoice">Invoice</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="role">Role</string>
    <string name="pin">Pin</string>
    <string name="eid">Emp Id</string>
    <string name="tables">Tables</string>
    <string name="admin">Admin</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="mac">Mac</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="booking">Booking</string>
    <string name="device_id">Device id</string>
    <string name="table_number_exits">Table number is exists!</string>
    <string name="user_exits">User is exists!</string>
    <string name="add_category">Add Category</string>
    <string name="add_table">Add Table</string>
    <string name="add_food">Add a item</string>
    <string name="update">Update</string>
    <string name="update_category">Update category</string>
    <string name="please_make_a_change_to_update">Please make a change to update!</string>
    <string name="successfully_updated">Successfully updated!</string>
    <string name="booking_avilable">There is a current booking to this table!</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="update_table">Update Table</string>
    <string name="add_user">Add User</string>
    <string name="this_year">This Year</string>
    <string name="order_id">Order Id</string>
    <string name="item_id">Item Id</string>
    <string name="date_time">Date/Time</string>
    <string name="sales_report">Sales Report</string>
    <string name="chef_performance_report">Chefs Performance Report</string>
    <string name="category_report">Category Report</string>
    <string name="number_of_orders">Number of Orders</string>
    <string name="value">Value</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="update_user">Update User</string>
    <string name="please_use_a_differen_pin">Please use a diffetent pin!</string>
    <string name="can_not_delete_own_user">Can not delete own user!</string>
    <string name="can_not_update_own_user">Can not update own user!</string>
    <string name="category_id">Category Id</string>
    <string name="offer_id">Offer id</string>
    <string name="promo_code">Promo code</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End time</string>
    <string name="update_food">Update Food</string>
    <string name="create_offer">Create Offer</string>
    <string name="offer_name">Offer name</string>
    <string name="discount_in_percent">Discount in percentage (%)</string>
    <string name="start">Start</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="end">End</string>
    <string name="please_select_different_time_slot">Please select a different time slot</string>
    <string name="update_offer">Update Offer</string>
    <string name="percentage">Percantage</string>
    <string name="gross_amount">GROSS AMOUNT</string>
    <string name="net_amount">NET AMOUNT</string>
    <string name="do_you_want_to_settle_this_order">Do you want to settle this order?</string>
    <string name="price_should_be_higher_than_the_cost">The price should be higher than the cost!</string>
</resources>