<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_navigation_food"
        android:icon="@drawable/ic_food"
        android:title="@string/food" />

    <item
        android:id="@+id/bottom_navigation_admin"
        android:icon="@drawable/ic_admin"
        android:title="@string/admin" />

    <item
        android:id="@+id/bottom_navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />

  <!--  <item
        android:id="@+id/bottom_navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/users"/>

    <item
        android:id="@+id/bottom_navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/reports"/>-->

</menu>
