<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/date_time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvOrderId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/order_id"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvItemId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/item_id"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/cost"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</RelativeLayout>