<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/transparent_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="@dimen/text_size_ex_large" />

        <TextView
            android:id="@+id/tvEid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/eid"
            android:textSize="@dimen/text_size_ex_large" />

        <TextView
            android:id="@+id/tvRole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/role"
            android:textSize="@dimen/text_size_ex_large" />

        <TextView
            android:id="@+id/tvPin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/pin"
            android:textSize="@dimen/text_size_ex_large"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/password"
            android:textSize="@dimen/text_size_ex_large"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnRemove"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_delete" />

            <ImageView
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>