<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/dark_gray">

        <TextView
            android:id="@+id/tvEmpId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/empolyee_id"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />

        <TextView
            android:id="@+id/tvNumberOfOrders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/number_of_orders"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />

        <TextView
            android:id="@+id/tvValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/value"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />
    </LinearLayout>

</RelativeLayout>