<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/dark_gray"
        android:gravity="center">

        <TextView
            android:id="@+id/tvCatId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/category_id"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />

        <TextView
            android:id="@+id/tvValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/value"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_large_size" />
    </LinearLayout>

</LinearLayout>