<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black">

        <TextView
            android:id="@+id/tvTableNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/table_number"
            android:gravity="center"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_ex_large" />

        <TextView
            android:id="@+id/tvMac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mac"
            android:gravity="center_vertical"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_ex_large" />

        <TextView
            android:id="@+id/tvNumberOfSeats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number_of_seats"
            android:gravity="center"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_ex_large" />

        <TextView
            android:id="@+id/tvBooking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/booking"
            android:gravity="center_vertical"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_size_ex_large" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btnRemove"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_delete" />

            <ImageView
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>